# pwdm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: static.yml  test.yml
src/: cli.rs  db.rs  lib.rs  main.rs  manager.rs
src/cli/: error.rs
src/manager/: error.rs  tests.rs
