[package]
name = "pwdm"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Owain Davies"]
description = "Rudimentary command-line tool and Rust library for managing passwords."
repository = "https://github.com/OTheDev/pwdm"
readme = "README.md"
keywords = ["password", "cli", "password-manager", "aes-gcm", "argon2"]
categories = ["command-line-utilities", "cryptography", "database-implementations"]

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
dialoguer = "0.11"
dirs = "5.0"
pwdg = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
